fix heroku deployment

--- a/rent/templates/rent/index.html
+++ b/rent/templates/rent/index.html
@@ -132,6 +132,10 @@
         <br>
             <a href="https://twitter.com/tropianhs?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow me on Twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
         <br>
+        <br>
+        <h5>
+        Inspired by Atmos
+        </h5>
         </div>
     </div>
 
