--- a/rent/templates/rent/index.html
+++ b/rent/templates/rent/index.html
@@ -77,7 +77,7 @@
                                 <div class="row">
                                     <div class="col-sm-8">
                                         <h3 class="title">{{ obj.mq }} sq. m.</h3>
-                                        <h5>{{ obj.price }} € - {{ obj.rooms }} rooms - {{ obj.baths }} baths</h5>
+                                        <h5>{{ obj.price }}€/month - {{ obj.rooms }} rooms - {{ obj.baths }} baths</h5>
                                     </div>
                                     <div class="col-sm-2">
                                         <div class="text-align-center"> 
