--- a/rent/templates/rent/index.html
+++ b/rent/templates/rent/index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-xs-12 col-md-6">
             <br>
             <img class="logo" src="static/rent/images/logo.png" alt="">
             <br>
@@ -56,7 +56,7 @@
         </div>
         
 
-        <div class="col-sm text-left">
+        <div class="col-xs-12 col-md-6 text-left">
             <br>
             <br>
             <br>
@@ -110,14 +110,9 @@
     <div class="row">
         <div class="col-sm text-center">
             <br>
-            Like the idea? Subscribe to get news
+            Like the idea? Subscribe to stay updated
             <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-                #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
             <div id="mc_embed_signup">
             <form action="https://xyz.us16.list-manage.com/subscribe/post?u=40d3ccd52b69c7b53f77087c7&amp;id=8a6f65f5bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
