--- a/rent/templates/rent/base.html
+++ b/rent/templates/rent/base.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Amiko' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="{% static 'rent/style.css' %}" />
+    <style type="text/css">
+                #mc_embed_signup{clear:left; font:20px Helvetica,Arial,sans-serif; width:100%;}
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
 </head>
  
 <body>
