--- a/rent/templates/rent/index.html
+++ b/rent/templates/rent/index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-sm-12 col-lg-6">
             <br>
             <img class="logo" src="static/rent/images/logo.png" alt="">
             <br>
@@ -56,7 +56,7 @@
         </div>
         
 
-        <div class="col-xs-12 col-md-6 text-left">
+        <div class="col-sm-12 col-lg-6 text-left">
             <br>
             <br>
             <br>
