--- a/rent/templates/rent/index.html
+++ b/rent/templates/rent/index.html
@@ -93,11 +93,11 @@
                     {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#carouselHousesControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselHousesControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
